Functioning local play

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <div id="board">
             <table>
                 <tr id="top-row">
-                    <td id="0"> X </td>
-                    <td id="1"> O </td>
-                    <td id="2"> X </td>
+                    <td id="0"> <button> X </button> </td>
+                    <td id="1"> <button> X </button> </td>
+                    <td id="2"> <button> X </button> </td>
                 </tr>
                 <tr id="mid-row">
-                    <td id="3"> O </td>
-                    <td id="4"> X </td>
-                    <td id="5"> O </td>
+                    <td id="3"> <button> X </button> </td>
+                    <td id="4"> <button> X </button> </td>
+                    <td id="5"> <button> X </button> </td>
                 </tr>
                 <tr id="bottom-row">
-                    <td id="6"> X </td>
-                    <td id="7"> O </td>
-                    <td id="8"> X </td>
+                    <td id="6"> <button> X </button> </td>
+                    <td id="7"> <button> X </button> </td>
+                    <td id="8"> <button> X </button> </td>
                 </tr>
             </table>
         </div>
@@ -33,6 +33,7 @@
                 <h2 id="turn-display">Current Turn: Player 1</h2>
                 <h1 id="mark-display">X</h1>
             </div>
+            <button id="reset-button"> Reset </button>
             <hgroup id="scoreboard">
                 <h2>Scoreboard</h2>
                 <h3>Player 1 (X): 0</h3>
@@ -41,4 +42,5 @@
         </div>
     </div>
 </body>
+<script src="main.js"></script>
 </html>
