--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="main.js" defer></script>
+
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
@@ -42,5 +44,4 @@
         </div>
     </div>
 </body>
-<script src="main.js"></script>
 </html>
